edits to acquire file

--- a/jada_aquire_and_prep.ipynb
+++ b/jada_aquire_and_prep.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,399 +163,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Unnamed: 0.1</th>\n",
-       "      <th>Unnamed: 0.1.1</th>\n",
-       "      <th>parcelid</th>\n",
-       "      <th>bathroomcnt</th>\n",
-       "      <th>bedroomcnt</th>\n",
-       "      <th>buildingqualitytypeid</th>\n",
-       "      <th>calculatedfinishedsquarefeet</th>\n",
-       "      <th>finishedsquarefeet12</th>\n",
-       "      <th>fullbathcnt</th>\n",
-       "      <th>...</th>\n",
-       "      <th>assessmentyear</th>\n",
-       "      <th>landtaxvaluedollarcnt</th>\n",
-       "      <th>taxamount</th>\n",
-       "      <th>logerror</th>\n",
-       "      <th>heatingorsystemdesc</th>\n",
-       "      <th>propertylandusedesc</th>\n",
-       "      <th>Los_Angeles</th>\n",
-       "      <th>Orange</th>\n",
-       "      <th>Ventura</th>\n",
-       "      <th>age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14297519</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3100.0</td>\n",
-       "      <td>3100.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>537569.0</td>\n",
-       "      <td>11013.72</td>\n",
-       "      <td>0.025595</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17052889</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1465.0</td>\n",
-       "      <td>1465.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>376000.0</td>\n",
-       "      <td>5672.48</td>\n",
-       "      <td>0.055619</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>14186244</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1243.0</td>\n",
-       "      <td>1243.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>479489.0</td>\n",
-       "      <td>6488.30</td>\n",
-       "      <td>0.005383</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>55.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>12177905</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2376.0</td>\n",
-       "      <td>2376.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>36225.0</td>\n",
-       "      <td>1777.51</td>\n",
-       "      <td>-0.103410</td>\n",
-       "      <td>Central</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>47.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>10887214</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1312.0</td>\n",
-       "      <td>1312.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>45726.0</td>\n",
-       "      <td>1533.89</td>\n",
-       "      <td>0.006940</td>\n",
-       "      <td>Central</td>\n",
-       "      <td>Condominium</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>53.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>75201</td>\n",
-       "      <td>75201</td>\n",
-       "      <td>75201</td>\n",
-       "      <td>76720</td>\n",
-       "      <td>11000655</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1286.0</td>\n",
-       "      <td>1286.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>283704.0</td>\n",
-       "      <td>4478.43</td>\n",
-       "      <td>0.020615</td>\n",
-       "      <td>Central</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>77.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>75202</td>\n",
-       "      <td>75202</td>\n",
-       "      <td>75202</td>\n",
-       "      <td>76721</td>\n",
-       "      <td>17239384</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1612.0</td>\n",
-       "      <td>1612.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>16522.0</td>\n",
-       "      <td>1107.48</td>\n",
-       "      <td>0.013209</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>53.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>75203</td>\n",
-       "      <td>75203</td>\n",
-       "      <td>75203</td>\n",
-       "      <td>76722</td>\n",
-       "      <td>12773139</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1032.0</td>\n",
-       "      <td>1032.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>16749.0</td>\n",
-       "      <td>876.43</td>\n",
-       "      <td>0.037129</td>\n",
-       "      <td>Central</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>63.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>75204</td>\n",
-       "      <td>75204</td>\n",
-       "      <td>75204</td>\n",
-       "      <td>76723</td>\n",
-       "      <td>12826780</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1762.0</td>\n",
-       "      <td>1762.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>382000.0</td>\n",
-       "      <td>6317.15</td>\n",
-       "      <td>0.007204</td>\n",
-       "      <td>Central</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>62.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>75205</td>\n",
-       "      <td>75205</td>\n",
-       "      <td>75205</td>\n",
-       "      <td>76724</td>\n",
-       "      <td>13083743</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1050.0</td>\n",
-       "      <td>1050.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>182216.0</td>\n",
-       "      <td>3345.78</td>\n",
-       "      <td>-0.197755</td>\n",
-       "      <td>Floor/Wall</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>57.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>75206 rows × 33 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       Unnamed: 0  Unnamed: 0.1  Unnamed: 0.1.1  parcelid  bathroomcnt  \\\n",
-       "0               0             0               0  14297519          3.5   \n",
-       "1               1             1               1  17052889          1.0   \n",
-       "2               2             2               2  14186244          2.0   \n",
-       "3               3             3               3  12177905          3.0   \n",
-       "4               4             4               4  10887214          3.0   \n",
-       "...           ...           ...             ...       ...          ...   \n",
-       "75201       75201         75201           76720  11000655          2.0   \n",
-       "75202       75202         75202           76721  17239384          2.0   \n",
-       "75203       75203         75203           76722  12773139          1.0   \n",
-       "75204       75204         75204           76723  12826780          2.0   \n",
-       "75205       75205         75205           76724  13083743          2.0   \n",
-       "\n",
-       "       bedroomcnt  buildingqualitytypeid  calculatedfinishedsquarefeet  \\\n",
-       "0             4.0                    6.0                        3100.0   \n",
-       "1             2.0                    6.0                        1465.0   \n",
-       "2             3.0                    6.0                        1243.0   \n",
-       "3             4.0                    8.0                        2376.0   \n",
-       "4             3.0                    8.0                        1312.0   \n",
-       "...           ...                    ...                           ...   \n",
-       "75201         2.0                    6.0                        1286.0   \n",
-       "75202         4.0                    6.0                        1612.0   \n",
-       "75203         3.0                    4.0                        1032.0   \n",
-       "75204         3.0                    6.0                        1762.0   \n",
-       "75205         3.0                    4.0                        1050.0   \n",
-       "\n",
-       "       finishedsquarefeet12  fullbathcnt  ...  assessmentyear  \\\n",
-       "0                    3100.0          3.0  ...          2016.0   \n",
-       "1                    1465.0          1.0  ...          2016.0   \n",
-       "2                    1243.0          2.0  ...          2016.0   \n",
-       "3                    2376.0          3.0  ...          2016.0   \n",
-       "4                    1312.0          3.0  ...          2016.0   \n",
-       "...                     ...          ...  ...             ...   \n",
-       "75201                1286.0          2.0  ...          2016.0   \n",
-       "75202                1612.0          2.0  ...          2016.0   \n",
-       "75203                1032.0          1.0  ...          2016.0   \n",
-       "75204                1762.0          2.0  ...          2016.0   \n",
-       "75205                1050.0          2.0  ...          2016.0   \n",
-       "\n",
-       "       landtaxvaluedollarcnt  taxamount  logerror  heatingorsystemdesc  \\\n",
-       "0                   537569.0   11013.72  0.025595                 None   \n",
-       "1                   376000.0    5672.48  0.055619                 None   \n",
-       "2                   479489.0    6488.30  0.005383                 None   \n",
-       "3                    36225.0    1777.51 -0.103410              Central   \n",
-       "4                    45726.0    1533.89  0.006940              Central   \n",
-       "...                      ...        ...       ...                  ...   \n",
-       "75201               283704.0    4478.43  0.020615              Central   \n",
-       "75202                16522.0    1107.48  0.013209                 None   \n",
-       "75203                16749.0     876.43  0.037129              Central   \n",
-       "75204               382000.0    6317.15  0.007204              Central   \n",
-       "75205               182216.0    3345.78 -0.197755           Floor/Wall   \n",
-       "\n",
-       "             propertylandusedesc  Los_Angeles  Orange  Ventura   age  \n",
-       "0      Single Family Residential            0       1        0  19.0  \n",
-       "1      Single Family Residential            0       0        1  50.0  \n",
-       "2      Single Family Residential            0       1        0  55.0  \n",
-       "3      Single Family Residential            1       0        0  47.0  \n",
-       "4                    Condominium            1       0        0  53.0  \n",
-       "...                          ...          ...     ...      ...   ...  \n",
-       "75201  Single Family Residential            1       0        0  77.0  \n",
-       "75202  Single Family Residential            0       0        1  53.0  \n",
-       "75203  Single Family Residential            1       0        0  63.0  \n",
-       "75204  Single Family Residential            1       0        0  62.0  \n",
-       "75205  Single Family Residential            1       0        0  57.0  \n",
-       "\n",
-       "[75206 rows x 33 columns]"
+       "['Unnamed: 0',\n",
+       " 'parcelid',\n",
+       " 'bathroomcnt',\n",
+       " 'bedroomcnt',\n",
+       " 'buildingqualitytypeid',\n",
+       " 'calculatedfinishedsquarefeet',\n",
+       " 'finishedsquarefeet12',\n",
+       " 'fullbathcnt',\n",
+       " 'latitude',\n",
+       " 'longitude',\n",
+       " 'lotsizesquarefeet',\n",
+       " 'propertycountylandusecode',\n",
+       " 'rawcensustractandblock',\n",
+       " 'regionidcity',\n",
+       " 'regionidcounty',\n",
+       " 'regionidzip',\n",
+       " 'roomcnt',\n",
+       " 'unitcnt',\n",
+       " 'yearbuilt',\n",
+       " 'structuretaxvaluedollarcnt',\n",
+       " 'taxvaluedollarcnt',\n",
+       " 'assessmentyear',\n",
+       " 'landtaxvaluedollarcnt',\n",
+       " 'taxamount',\n",
+       " 'logerror',\n",
+       " 'heatingorsystemdesc',\n",
+       " 'propertylandusedesc',\n",
+       " 'Los_Angeles',\n",
+       " 'Orange',\n",
+       " 'Ventura',\n",
+       " 'age']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.columns.to_list()"
    ]
   },
   {
