started cluster evaluation

--- a/jada_clustering.ipynb
+++ b/jada_clustering.ipynb
@@ -1768,7 +1768,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# get summary stats of the dollar per sqft to possibly use one/some of these as new variables\n",
+    "cluster_stats = X_train.groupby(['area_cluster_id', 'size_cluster_id'])['structure_dollar_per_sqft'].describe().reset_index()\n",
+    "scaled_cluster_stats = train_scaled.groupby(['area_cluster_id', 'size_cluster_id'])['structure_dollar_per_sqft'].describe().reset_index()\n",
+    "\n",
+    "cluster_stats.head()"
+   ]
   }
  ],
  "metadata": {
