added model and evaluation metrics

--- a/jada_modeling.ipynb
+++ b/jada_modeling.ipynb
@@ -776,16 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metrics = model_accuracy(y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -834,12 +825,14 @@
        "0                     y_hat           0.000000"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "metrics = model_accuracy(y_train)\n",
+    "\n",
     "metrics"
    ]
   },
