changes to notebook

--- a/chase_notebook.ipynb
+++ b/chase_notebook.ipynb
@@ -4,10 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='top'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Clustering to improve logerror\n",
     "\n",
     "**1.** [**Project Plan**](#Project-Plan)<br>\n",
-    "**2.** [**Data Acquistion**](#acquire_data)<br>\n",
+    "**2.** [**Data Acquistion**](#shit_aint_working)<br>\n",
     "**3.** [**Explore Data**](#explore_data)<br>\n",
     "**4.** [**Create a Baseline Model**](#baseline_model)<br>\n",
     "**5.** [**Create and Compare Different Models**](#modeling)<br>\n",
@@ -127,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='acquire_data'></a>"
+    "<a id='shit_aint_working'></a>"
    ]
   },
   {
@@ -841,6 +848,20 @@
    "outputs": [],
    "source": [
     "scaler, train_scaled, test_scaled = split_scale.min_max_scaler(train, test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Got back to the top](#top)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explore"
    ]
   },
   {
@@ -2289,6 +2310,307 @@
    ],
    "source": [
     "train.logerror.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Splitting out X and Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = train_scaled[['lot_size','age','full_value','longitude','latitude','square_footage']]\n",
+    "y_train = train_scaled[['logerror']]\n",
+    "\n",
+    "X_test = test_scaled[['lot_size','age','full_value','longitude','latitude','square_footage']]\n",
+    "y_test = test_scaled[['logerror']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>44758</th>\n",
+       "      <td>0.824503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76378</th>\n",
+       "      <td>0.574090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3539</th>\n",
+       "      <td>0.590715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35048</th>\n",
+       "      <td>0.587234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31603</th>\n",
+       "      <td>0.590348</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         actual\n",
+       "44758  0.824503\n",
+       "76378  0.574090\n",
+       "3539   0.590715\n",
+       "35048  0.587234\n",
+       "31603  0.590348"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = y_train[['logerror']]\n",
+    "predictions = predictions.rename(columns={'logerror': 'actual'})\n",
+    "predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First our baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the baseline dataset model performance\n",
+      "RSME = 0.0216\n",
+      "R2 score =  0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create baseline\n",
+    "X_train = train_scaled[['lot_size','age','full_value','longitude','latitude','square_footage']]\n",
+    "y_train = train_scaled[['logerror']]\n",
+    "\n",
+    "y_train['mean_logerror'] = y_train.logerror.mean()\n",
+    "rmse_baseline = np.sqrt(mean_squared_error(y_train.logerror, y_train.mean_logerror))\n",
+    "r2_baseline = r2_score(y_train.logerror, y_train.mean_logerror)\n",
+    "\n",
+    "predictions['rsme_baseline'] = ('{:.4f}'.format(rmse_baseline))\n",
+    "print('This is the baseline dataset model performance')\n",
+    "print(f'RSME = {rmse_baseline:.4f}')\n",
+    "print(f'R2 score =  {r2_baseline:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the train dataset model performance\n",
+      "RSME = 0.0211\n",
+      "R2 score =  0.0544\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create decision tree regressor\n",
+    "X_train = train_scaled[['lot_size','age','full_value','longitude','latitude','square_footage']]\n",
+    "y_train = train_scaled[['logerror']]\n",
+    "\n",
+    "regressor = DecisionTreeRegressor(max_depth = 8, random_state=121)\n",
+    "regressor.fit(X_train, y_train)\n",
+    "y_pred = regressor.predict(X_train)\n",
+    "\n",
+    "rmse_dt_train = np.sqrt(mean_squared_error(y_train, y_pred))\n",
+    "r2_dt_train = r2_score(y_train, y_train_predicted)\n",
+    "\n",
+    "predictions['rsme_dt'] = ('{:.4f}'.format(rmse_dt_train))\n",
+    "print('This is the train dataset model performance')\n",
+    "print(f'RSME = {rmse_dt_train:.4f}')\n",
+    "print(f'R2 score =  {r2_dt_train:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual</th>\n",
+       "      <th>rsme_baseline</th>\n",
+       "      <th>rsme_dt</th>\n",
+       "      <th>rsme_rf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>44758</th>\n",
+       "      <td>0.824503</td>\n",
+       "      <td>0.0216</td>\n",
+       "      <td>0.0211</td>\n",
+       "      <td>0.0216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76378</th>\n",
+       "      <td>0.574090</td>\n",
+       "      <td>0.0216</td>\n",
+       "      <td>0.0211</td>\n",
+       "      <td>0.0216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3539</th>\n",
+       "      <td>0.590715</td>\n",
+       "      <td>0.0216</td>\n",
+       "      <td>0.0211</td>\n",
+       "      <td>0.0216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35048</th>\n",
+       "      <td>0.587234</td>\n",
+       "      <td>0.0216</td>\n",
+       "      <td>0.0211</td>\n",
+       "      <td>0.0216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31603</th>\n",
+       "      <td>0.590348</td>\n",
+       "      <td>0.0216</td>\n",
+       "      <td>0.0211</td>\n",
+       "      <td>0.0216</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         actual rsme_baseline rsme_dt rsme_rf\n",
+       "44758  0.824503        0.0216  0.0211  0.0216\n",
+       "76378  0.574090        0.0216  0.0211  0.0216\n",
+       "3539   0.590715        0.0216  0.0211  0.0216\n",
+       "35048  0.587234        0.0216  0.0211  0.0216\n",
+       "31603  0.590348        0.0216  0.0211  0.0216"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the train dataset model performance\n",
+      "RSME = 0.0216\n",
+      "R2 score =  0.0056\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create random forest regressor\n",
+    "X_train = train_scaled[['lot_size','age','full_value','longitude','latitude','square_footage']]\n",
+    "y_train = train_scaled[['logerror']]\n",
+    "\n",
+    "regressor = RandomForestRegressor(max_depth = 2, random_state=121, n_estimators=100)\n",
+    "regressor.fit(X_train, y_train)\n",
+    "y_pred = regressor.predict(X_train)\n",
+    "\n",
+    "rmse_rf_train = np.sqrt(mean_squared_error(y_train, y_pred))\n",
+    "r2_rf_train = r2_score(y_train, y_pred)\n",
+    "\n",
+    "predictions['rsme_rf'] = ('{:.4f}'.format(rmse_rf_train))\n",
+    "print('This is the train dataset model performance')\n",
+    "print(f'RSME = {rmse_rf_train:.4f}')\n",
+    "print(f'R2 score =  {r2_rf_train:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Got back to the top](#top)"
    ]
   },
   {
