added in modeling

--- a/clustering_for_log_error_final.ipynb
+++ b/clustering_for_log_error_final.ipynb
@@ -1170,6 +1170,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Went with a k of 5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -1400,7 +1407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Again we went with a k of 5"
+    "### Again we went with a k of 5"
    ]
   },
   {
@@ -1420,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1615,7 @@
        "31603             0.143014      0.246705             0.235960  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1706,7 @@
        "4 -1.940458  0.052353     False"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1710,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1783,7 +1790,7 @@
        "4  1.478603  0.139340     False"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1804,6 +1811,191 @@
    "metadata": {},
    "source": [
     "# Modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = train_scaled[['lot_size','age','full_value','longitude','latitude','square_footage']]\n",
+    "y_train = train_scaled[['logerror']]\n",
+    "\n",
+    "X_test = test_scaled[['lot_size','age','full_value','longitude','latitude','square_footage']]\n",
+    "y_test = test_scaled[['logerror']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>44758</td>\n",
+       "      <td>0.824503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>76378</td>\n",
+       "      <td>0.574090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3539</td>\n",
+       "      <td>0.590715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>35048</td>\n",
+       "      <td>0.587234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>31603</td>\n",
+       "      <td>0.590348</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         actual\n",
+       "44758  0.824503\n",
+       "76378  0.574090\n",
+       "3539   0.590715\n",
+       "35048  0.587234\n",
+       "31603  0.590348"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = y_train[['logerror']]\n",
+    "predictions = predictions.rename(columns={'logerror': 'actual'})\n",
+    "predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the baseline dataset model performance\n",
+      "RSME = 0.0216\n",
+      "R2 score =  0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create baseline\n",
+    "X_train = train_scaled[['lot_size','age','full_value','longitude','latitude','square_footage']]\n",
+    "y_train = train_scaled[['logerror']]\n",
+    "\n",
+    "y_train['mean_logerror'] = y_train.logerror.mean()\n",
+    "rmse_baseline = np.sqrt(mean_squared_error(y_train.logerror, y_train.mean_logerror))\n",
+    "r2_baseline = r2_score(y_train.logerror, y_train.mean_logerror)\n",
+    "\n",
+    "predictions['rsme_baseline'] = ('{:.4f}'.format(rmse_baseline))\n",
+    "print('This is the baseline dataset model performance')\n",
+    "print(f'RSME = {rmse_baseline:.4f}')\n",
+    "print(f'R2 score =  {r2_baseline:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_train_predicted' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-c6f9855263af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mrmse_dt_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmean_squared_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mr2_dt_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr2_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_predicted\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'rsme_dt'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'{:.4f}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrmse_dt_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y_train_predicted' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# create decision tree regressor\n",
+    "X_train = train_scaled[['lot_size','age','full_value','longitude','latitude','square_footage']]\n",
+    "y_train = train_scaled[['logerror']]\n",
+    "\n",
+    "regressor = DecisionTreeRegressor(max_depth = 8, random_state=121)\n",
+    "regressor.fit(X_train, y_train)\n",
+    "y_pred = regressor.predict(X_train)\n",
+    "\n",
+    "rmse_dt_train = np.sqrt(mean_squared_error(y_train, y_pred))\n",
+    "r2_dt_train = r2_score(y_train, y_train_predicted)\n",
+    "\n",
+    "predictions['rsme_dt'] = ('{:.4f}'.format(rmse_dt_train))\n",
+    "print('This is the train dataset model performance')\n",
+    "print(f'RSME = {rmse_dt_train:.4f}')\n",
+    "print(f'R2 score =  {r2_dt_train:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the train dataset model performance\n",
+      "RSME = 0.0216\n",
+      "R2 score =  0.0056\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create random forest regressor\n",
+    "X_train = train_scaled[['lot_size','age','full_value','longitude','latitude','square_footage']]\n",
+    "y_train = train_scaled[['logerror']]\n",
+    "\n",
+    "regressor = RandomForestRegressor(max_depth = 2, random_state=121, n_estimators=100)\n",
+    "regressor.fit(X_train, y_train)\n",
+    "y_pred = regressor.predict(X_train)\n",
+    "\n",
+    "rmse_rf_train = np.sqrt(mean_squared_error(y_train, y_pred))\n",
+    "r2_rf_train = r2_score(y_train, y_pred)\n",
+    "\n",
+    "predictions['rsme_rf'] = ('{:.4f}'.format(rmse_rf_train))\n",
+    "print('This is the train dataset model performance')\n",
+    "print(f'RSME = {rmse_rf_train:.4f}')\n",
+    "print(f'R2 score =  {r2_rf_train:.4f}')"
    ]
   },
   {
